homework4/dp-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-zv-depl-auth
  namespace: homework
  labels:
    app: zv-dp-auth
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      zv-dp-auth: v1
  template:
    metadata:
      labels:
        zv-dp-auth: v1
    spec:
      containers:
      - name: otus-zv-auth-webapi
        image: aquirier/otus-zv-auth:homework
        ports:
        - containerPort: 80
