homework4/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-zv-auth-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    zv-dp-auth: v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
